# NicheRadar

./: .gitignore  POLYMARKET_API.md  README.md  information.txt  market_shortlist.md  polymarket_bot_plan.md  pyproject.toml
bot/: backtest_dataset.py  backtest_engine.py  backtest_reporting.py  calibration.py  cli.py  common.py  debate_models.py  debate_orchestrator.py  debate_prompts.py  evidence_collector.py  evidence_source_finder.py  historical_fetcher.py  historical_snapshot_builder.py  historical_storage.py  llm_file_exchange.py  main.py  market_discovery.py  models.py  reporting.py  settlement_validation.py  shadow.py  shadow_replay.py  signal_engine.py  storage.py  watchlist.py
data/: sample_markets.json  watchlist.json
frontend/: README.md  app.js  index.html  styles.css
logs/: history_backtest_report.md  history_calibration_report.md
tests/: test_debate_orchestrator.py  test_evidence_collector_llm.py  test_evidence_source_finder.py  test_historical_fetcher.py  test_historical_snapshot_builder.py  test_signal_engine.py
